# tarantool-spacer

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  spacer-scm-1.rockspec  spacer-scm-2.rockspec  spacer.lua
rockspecs/: spacer-2.0.1-1.rockspec  spacer-2.0.2-1.rockspec  spacer-2.1.1-1.rockspec  spacer-2.1.2-1.rockspec  spacer-3.0.0-1.rockspec  spacer-3.0.1-1.rockspec  spacer-3.1.0-1.rockspec  spacer-3.2.0-1.rockspec  spacer-scm-1.rockspec  spacer-scm-2.rockspec  spacer-scm-3.rockspec
spacer/: CMakeLists.txt  compat.lua  fileio.lua  init.lua  migration.lua  myinspect.lua  ops.lua  space_migration.lua  stmt.lua  transformations.lua  util.lua  version.lua
tests/: 01-basic.lua
tests/tnt/: init.lua
